# flask-pywebview-briefcase

./: CHANGELOG.md  LICENSE  README.md  TROUBLESHOOTING.md  embeddings.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/flask_pywebview_app/: __main__.py  app.py
src/flasktest/: __init__.py  __main__.py  app.py
src/flasktest/resources/templates/: index.html
tests/: test_app.py
